--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
     "firebase": "^11.9.0",
     "lucide-react": "^0.514.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-parallax-tilt": "^1.7.296",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.5",
