--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.0",
     "firebase": "^11.9.0",
     "lucide-react": "^0.514.0",
     "react": "^19.1.0",
